@@ -1,4 +1,4 @@
-$Id: History,v 1.129 2001-06-15 07:28:20 stanaka Exp $
+$Id: History,v 1.130 2001-06-15 12:04:40 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,11 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+15th June 2001  John Allison
+- Added 2nd template argument (less) to sets in G4ASCIITreeSceneHandler and
+  G4GAGTreeSceneHandler.
+
 15th June 2001  Satoshi Tanaka (vis-V03-01-05)
 - The  first committing of GAGTree driver.
 - Other files in ./Tree/ are the same as vis-V03-01-04.
